--- a/dtt/geren/index.html
+++ b/dtt/geren/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<script src="jquery.js"></script>
 	<link rel="stylesheet" href="css/jquery.fullPage.css">
+	<link rel="stylesheet" href="swiper-min.css">
 	<script src="jquery.fullPage.js"></script>
+	<script src="swiper-jquery-min.js"></script>
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/shangehua.css">
@@ -13,6 +15,7 @@
 <body>
 <div class="fullpage">
 	<div class="section">
+		<div class="next"> > </div>
 	    <div class="header">
 
 		<img src="img/bg.jpg" alt="">
@@ -150,76 +153,94 @@
     </div>
 
 	<div class="section">
-	   <div class="nr-biaoti">
-			<p class="skill-zi"> My Portfulio</p>
-	</div>
+		<div class="works">
+		   <div class="nr-biaoti">
+				<p class="skill-zi"> My Portfulio</p>
+		</div>
 
-       <div class="zuopin">
-      <ul class="zuopin-box">
-		  <div class="slide">
-   	      <li class="zuopin1 a col-sm-6 col-xs-12 col-lg4">
+		   <div class="zuopin">
+		  <ul class="zuopin-box">
+			  <div class="swiper-container">
+				  <div class="swiper-wrapper">
+					  <div class="swiper-slide">
+							  <li class="zuopin1 a">
 
-   	 	<img src="img/fanke.png" alt="">
-   	 	<div class="zuopin-zhezhao">
-   	 		<a href="../fanke/index.html"><p class="zhezhao-zi">凡客</p></a>
-   	 	</div>
-   	 </li>
-		  <li class="zuopin1 w col-sm-6 col-xs-12 col-lg4">
-   	 	<img src="img/xiaomi.png" alt="">
-   	 	<div class="zuopin-zhezhao">
-   	 		<a href="../xiaomi/2.html"><p class="zhezhao-zi">小米</p></a>
-   	 	</div>
-   	 </li>
-   	      <li class="zuopin1 d col-sm-6 col-xs-12 col-lg4">
-   	 	<img src="img/tianmaopc.png" alt="">
-   	 	<div class="zuopin-zhezhao">
-   	 		<a href="../tm/index.html"><p class="zhezhao-zi">天猫PC端</p></a>
-   	 	</div>
-   	 </li>
-	      </div>
-
-		  <div class="slide">
-		  <li class="zuopin1 a col-sm-6 col-xs-12 col-lg4">
-   	 	<img src="img/pingguo.png" alt="">
-   	 	<div class="zuopin-zhezhao f">
-   	 		<a href="../apple/index.html"><p class="zhezhao-zi">苹果响应式</p></a>
-   	 	</div>
-   	 </li>
-   	      <li class="zuopin1 g col-sm-6 col-xs-12 col-lg4">
-   	 	<img src="img/tianmaoshouji.png" alt="">
-   	 	<div class="zuopin-zhezhao">
-   	 		<a href="../tmphone/index.html"><p class="zhezhao-zi">天猫手机端</p></a>
-   	 	</div>
-   	 </li>
-   	      <li class="zuopin1 h col-sm-6 col-xs-12 col-lg4">
-   	 	<img src="img/youyike.png" alt="">
-   	 	<div class="zuopin-zhezhao">
-   	 		<a href="../uek/html/index.html"><p class="zhezhao-zi">优逸客</p></a>
-   	 	</div>
-   	 </li>
-	      </div>
-		  <div class="slide">
-		  <li class="zuopin1 a col-sm-6 col-xs-12 col-lg4">
-			  <img src="img/pingguo.png" alt="">
-			  <div class="zuopin-zhezhao f">
-				  <a href="../apple/index.html"><p class="zhezhao-zi">苹果响应式</p></a>
+								<img src="img/fanke.png" alt="">
+								<div class="zuopin-zhezhao">
+									<a href="../fanke/index.html"><p class="zhezhao-zi">凡客</p></a>
+								</div>
+							  </li>
+					  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 w">
+							  <img src="img/xiaomi.png" alt="">
+							  <div class="zuopin-zhezhao">
+								  <a href="../xiaomi/2.html"><p class="zhezhao-zi">小米</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 d">
+							  <img src="img/tianmaopc.png" alt="">
+							  <div class="zuopin-zhezhao">
+								  <a href="../tm/index.html"><p class="zhezhao-zi">天猫PC端</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 a">
+							  <img src="img/pingguo.png" alt="">
+							  <div class="zuopin-zhezhao f">
+								  <a href="../apple/index.html"><p class="zhezhao-zi">苹果响应式</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 g">
+							  <img src="img/tianmaoshouji.png" alt="">
+							  <div class="zuopin-zhezhao">
+								  <a href="../tmphone/index.html"><p class="zhezhao-zi">天猫手机端</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
+							  <li class="zuopin1 h">
+								  <img src="img/youyike.png" alt="">
+								  <div class="zuopin-zhezhao">
+									  <a href="../uek/html/index.html"><p class="zhezhao-zi">优逸客</p></a>
+								  </div>
+							  </li>
+						  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 a">
+							  <img src="img/pingguo.png" alt="">
+							  <div class="zuopin-zhezhao f">
+								  <a href="../apple/index.html"><p class="zhezhao-zi">苹果响应式</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 g">
+							  <img src="img/tianmaoshouji.png" alt="">
+							  <div class="zuopin-zhezhao">
+								  <a href="../tmphone/index.html"><p class="zhezhao-zi">天猫手机端</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
+						  <li class="zuopin1 h">
+							  <img src="img/youyike.png" alt="">
+							  <div class="zuopin-zhezhao">
+								  <a href="../uek/html/index.html"><p class="zhezhao-zi">优逸客</p></a>
+							  </div>
+						  </li>
+					  </div>
+				</div>
+				  <div class="swiper-pagination"></div>
 			  </div>
-		  </li>
-		  <li class="zuopin1 g col-sm-6 col-xs-12 col-lg4">
-			  <img src="img/tianmaoshouji.png" alt="">
-			  <div class="zuopin-zhezhao">
-				  <a href="../tmphone/index.html"><p class="zhezhao-zi">天猫手机端</p></a>
-			  </div>
-		  </li>
-		  <li class="zuopin1 h col-sm-6 col-xs-12 col-lg4">
-			  <img src="img/youyike.png" alt="">
-			  <div class="zuopin-zhezhao">
-				  <a href="../uek/html/index.html"><p class="zhezhao-zi">优逸客</p></a>
-			  </div>
-		  </li>
-		  </div>
-   	</ul>
-   </div>
+		</ul>
+	   </div>
+		</div>
 	</div>
    
   <!--<div class="section">
@@ -248,63 +269,59 @@
   </div>-->
 
 	<div class="section">
-       <div class="nr-biaoti">
-			<p class="skill-zi"> Contact Me</p>
-   </div>
+		<div class="contact">
+		   <div class="nr-biaoti">
+				<p class="skill-zi"> Contact Me</p>
+	   </div>
 
-       <div class="lianxiwo">
-     <div class="lianxiwo-box">
-   	  <div class="lianxiwo-left">
-   	  	<div class="xingmingkuang">
-   	  		<p class="mingzi-ziti">Name:</p>
-   	  		<input type="text" class="wenbenName">
-   	  	</div>
-   	  	<div class="xingmingkuang">
-   	  		<p class="mingzi-ziti">Email:</p>
-   	  		<input type="text" class="wenbenName">
-   	  	</div>
+		   <div class="lianxiwo">
+		 <div class="lianxiwo-box">
+		  <div class="lianxiwo-left">
+			<div class="xingmingkuang">
+				<p class="mingzi-ziti">Name:</p>
+				<input type="text" class="wenbenName">
+			</div>
+			<div class="xingmingkuang">
+				<p class="mingzi-ziti">Email:</p>
+				<input type="text" class="wenbenName">
+			</div>
 
-   	  	<div class="xingmingkuang jianyi">
-   	  		<p class="mingzi-ziti">Comment:</p>
-   	  		<input type="text" class="wenbenName">
-   	  	</div>
+			<div class="xingmingkuang jianyi">
+				<p class="mingzi-ziti">Comment:</p>
+				<input type="text" class="wenbenName">
+			</div>
 
-   	  	<div class="xingmingkuang send">
-   	  		<div class="send-box">
-   	  			<p class="send-ziti">Send > </p>
-   	  		</div>
-   	  	</div>
-   	  </div>
-   	  <div class="lianxiwo-right">
-   	  	  <div class="wodelianxifangshi">
-   	  	  	<p class="info-zi">Contact Info</p>
-   	  	  </div>
+			<div class="xingmingkuang send">
+				<div class="send-box">
+					<p class="send-ziti">Send > </p>
+				</div>
+			</div>
+		  </div>
+		  <div class="lianxiwo-right">
+			  <div class="wodelianxifangshi">
+				<p class="info-zi">Contact Info</p>
+			  </div>
 
-   	  	  <div class="wodelianxifangshi tel">
-   	  	  	<p class="tel-zi">Address:shangxishenglinfenshi</p>
-   	  	  </div>
+			  <div class="wodelianxifangshi tel">
+				<p class="tel-zi">Address:shangxishenglinfenshi</p>
+			  </div>
 
-   	  	  <div class="wodelianxifangshi a">
-   	  	  	<p class="tel-zi">Tel: &nbsp;&nbsp;15703412738</p>
-   	  	  </div>
+			  <div class="wodelianxifangshi a">
+				<p class="tel-zi">Tel: &nbsp;&nbsp;15703412738</p>
+			  </div>
 
-   	  	  <div class="wodelianxifangshi a">
-   	  	  
-   	  	     <p class="tel-zi"> Email: &nbsp;1911389710@qq.com</p>
-   	  	 
-   	  	 </div>
-   	  </div>
-   	 </div>
-   </div>
-       </div>
+			  <div class="wodelianxifangshi a">
+
+				 <p class="tel-zi"> Email: &nbsp;1911389710@qq.com</p>
+
+			 </div>
+		  </div>
+		 </div>
+	   </div>
+		</div>
+	</div>
 </div>
-   <!--<div class="footer">-->
-   	<!-- <p class="text-center">Copyright © 2016.Company name All rights reserved.</p> -->
 
-   	<div class="fanhui">
-   		<p class="text-center a">返回顶部</p>
-   	</div>
-   <!--</div>-->
 
 </body>
 <script>
@@ -316,13 +333,46 @@
 			'navigation': true,
 			'navigationPosition': 'right',
 			'navigationTooltips': ['fullPage.js', 'Powerful', 'Amazing', 'Simple'],
+			fixedElements:".next",
+
 			afterLoad:function (an,index) {
 				if(index==2){
 					$(".jindu1").css("width","89%");
 					$(".jindu2").css("width","95%");
 					$(".jindu3").css("width","91%");
 					$(".jindu4").css("width","90%");
+				}else if(index==4){
+					$(".next").css("transform","rotate(-90deg)").addClass("active");
 				}
+			},
+			onLeave:function (index,nextIndex,diraction) {
+				if(index==4){
+					$(".next").css("transform","rotate(90deg)").removeClass("active");
+				}
+			}
+
+		});
+		$(".next").click(function () {
+			if($(this).hasClass("active")){
+				$.fn.fullpage.moveTo(1);
+			}else{
+				$.fn.fullpage.moveSectionDown();
+			}
+		})
+
+
+		var mySwiper=new Swiper('.swiper-container',{
+			pagination: '.swiper-pagination',
+			effect: 'coverflow',
+			grabCursor: true,
+			centeredSlides: true,
+			slidesPerView: 'auto',
+			coverflow: {
+				rotate: 50,
+				stretch: 0,
+				depth: 100,
+				modifier: 1,
+				slideShadows : true
 			}
 		})
 
