--- a/dtt/geren/index.html
+++ b/dtt/geren/index.html
@@ -167,7 +167,10 @@
 								<div class="inner"><i class="fontawesome-icon medium circle-yes icon-globe"></i>
 									<h4>ZIMU</h4>
 									<p>打字游戏</p>
-									<a href="../daziyouxi/DAZIYOUXI.html" class="button">进入</a> </div>
+									<a href="../daziyouxi/DAZIYOUXI.html" class="button">进入</a>
+
+									<div class="iconfont"><img src="img/字母.png" alt=""></div>
+								</div>
 							</div>
 						</li>
 						<li class="banners_item style-2 nomargin">
@@ -176,6 +179,7 @@
 									<h4>SAOLEI</h4>
 									<p>扫雷游戏</p>
 									<a href="../saolei/5.9游戏扫雷.html" class="button">进入</a> </div>
+								   <div class="iconfont"><img src="img/炸弹.png" alt=""></div>
 							</div>
 						</li>
 						<li class="banners_item style-3 ">
@@ -184,6 +188,7 @@
 									<h4>DRAW</h4>
 									<p>绘图板</p>
 									<a href="../draw/5.6.html" class="button">进入</a> </div>
+								<div class="iconfont"><img src="img/工具栏-新建-绘图.png" alt=""></div>
 							</div>
 						</li>
 						<li class="banners_item style-4 nomargin">
@@ -192,6 +197,7 @@
 									<h4>TODOLIST</h4>
 									<p>记事本</p>
 									<a href="../todoList/5.3daibanshixiang.html" class="button">进入</a> </div>
+								<div class="iconfont"><img src="img/记事本.png" alt=""></div>
 							</div>
 						</li>
 						<li class="banners_item style-5 ">
