--- a/dtt/geren/index.html
+++ b/dtt/geren/index.html
@@ -284,6 +284,14 @@
 						  </li>
 					  </div>
 					  <div class="swiper-slide">
+						  <li class="zuopin1 a">
+							  <img src="img/weierjia.png" alt="">
+							  <div class="zuopin-zhezhao f">
+								  <a href="../yidong/index.html"><p class="zhezhao-zi">中国移动</p></a>
+							  </div>
+						  </li>
+					  </div>
+					  <div class="swiper-slide">
 						  <li class="zuopin1 g">
 							  <img src="img/tianmaoshouji.png" alt="">
 							  <div class="zuopin-zhezhao">
