--- a/dtt/geren/index.html
+++ b/dtt/geren/index.html
@@ -231,7 +231,8 @@
 
 								<img src="img/fanke.png" alt="">
 								<div class="zuopin-zhezhao">
-									<a href="../fanke/index.html"><p class="zhezhao-zi">凡客</p></a>
+									<a href="../fanke/index.html" target="view_window"
+									><p class="zhezhao-zi">凡客</p></a>
 								</div>
 							  </li>
 					  </div>
@@ -239,7 +240,7 @@
 						  <li class="zuopin1 w">
 							  <img src="img/xiaomi.png" alt="">
 							  <div class="zuopin-zhezhao">
-								  <a href="../xiaomi/2.html"><p class="zhezhao-zi">小米</p></a>
+								  <a href="../xiaomi/2.html" target="view_window"><p class="zhezhao-zi">小米</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -247,7 +248,7 @@
 						  <li class="zuopin1 d">
 							  <img src="img/tianmaopc.png" alt="">
 							  <div class="zuopin-zhezhao">
-								  <a href="../tm/index.html"><p class="zhezhao-zi">天猫PC端</p></a>
+								  <a href="../tm/index.html" target="view_window"><p class="zhezhao-zi">天猫PC端</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -255,7 +256,7 @@
 						  <li class="zuopin1 a">
 							  <img src="img/pingguo.png" alt="">
 							  <div class="zuopin-zhezhao f">
-								  <a href="../apple/index.html"><p class="zhezhao-zi">苹果响应式</p></a>
+								  <a href="../apple/index.html" target="view_window"><p class="zhezhao-zi">苹果响应式</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -263,7 +264,7 @@
 						  <li class="zuopin1 g">
 							  <img src="img/jingdong.png" alt="">
 							  <div class="zuopin-zhezhao">
-								  <a href="../jingdong/index.html"><p class="zhezhao-zi">京东</p></a>
+								  <a href="../jingdong/index.html" target="view_window"><p class="zhezhao-zi">京东</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -271,7 +272,7 @@
 							  <li class="zuopin1 h">
 								  <img src="img/shafa.png" alt="">
 								  <div class="zuopin-zhezhao">
-									  <a href="../shafa/index.html"><p class="zhezhao-zi">沙发</p></a>
+									  <a href="../shafa/index.html" target="view_window"><p class="zhezhao-zi">沙发</p></a>
 								  </div>
 							  </li>
 						  </div>
@@ -279,7 +280,7 @@
 						  <li class="zuopin1 a">
 							  <img src="img/weierjia.png" alt="">
 							  <div class="zuopin-zhezhao f">
-								  <a href="../zhengzhanWeierjia/html/index.html"><p class="zhezhao-zi">威尔佳</p></a>
+								  <a href="../zhengzhanWeierjia/html/index.html" target="view_window"><p class="zhezhao-zi">威尔佳</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -287,7 +288,7 @@
 						  <li class="zuopin1 a">
 							  <img src="img/weierjia.png" alt="">
 							  <div class="zuopin-zhezhao f">
-								  <a href="../yidong/index.html"><p class="zhezhao-zi">中国移动</p></a>
+								  <a href="../yidong/index.html" target="view_window"><p class="zhezhao-zi">中国移动</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -295,7 +296,7 @@
 						  <li class="zuopin1 g">
 							  <img src="img/tianmaoshouji.png" alt="">
 							  <div class="zuopin-zhezhao">
-								  <a href="../tmphone/index.html"><p class="zhezhao-zi">天猫手机端</p></a>
+								  <a href="../tmphone/index.html" target="view_window"><p class="zhezhao-zi">天猫手机端</p></a>
 							  </div>
 						  </li>
 					  </div>
@@ -303,7 +304,7 @@
 						  <li class="zuopin1 h">
 							  <img src="img/youyike.png" alt="">
 							  <div class="zuopin-zhezhao">
-								  <a href="../uek/html/index.html"><p class="zhezhao-zi">优逸客</p></a>
+								  <a href="../uek/html/index.html" target="view_window"><p class="zhezhao-zi">优逸客</p></a>
 							  </div>
 						  </li>
 					  </div>
